user DataTypeConverter for hex and base64 parsing